--- a/fingerprint/slag/templates/slag/game.html
+++ b/fingerprint/slag/templates/slag/game.html
@@ -14,8 +14,7 @@ CarbonKillers
                 {% for question in questions %}
                 <section class="slider-content2">
                         <div>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/2bkqXVc_1go?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                        </h3>
-                        </div>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/DyYPiRSVg2c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                        </div>
                         <!-- <img src="{% static 'slag/slider/animacion2.svg' %}" alt=""> -->
                     </section>
                     <section class="slider-content2">
